Update frontend/src/componfeat(front):fix alignement of checkbox search filtersent/Search/CheckboxFilter.styl
using variables for margins size

--- a/frontend/src/component/Search/CheckboxFilter.styl
+++ b/frontend/src/component/Search/CheckboxFilter.styl
@@ -19,10 +19,10 @@
     & > input[type='checkbox']
           margin 0px standardSpacing
     &__input
-      margin-inline-start 5px
-      margin-inline-end 10px
+      margin-inline-start textSpacing
+      margin-inline-end standardSpacing
       align-self start
-      margin-top 5px
+      margin-top textSpacing
     &__label
       overflow hidden
       flex 1
